--- a/Personal Website/index.html
+++ b/Personal Website/index.html
@@ -9,7 +9,7 @@
           
         <body>
             <div class=Background><div  class="Name_Background"></div>
-			<span  class="Name">Jonas Gondorf</span>
+			<span  class="Name">Firstname Lastname</span>
 			<div  class="Navbar_Background"></div>
 			<div  class="Impressum_Background"></div><span  class="Impressum">Impressum</span>
 			<div  class="Moodboard_Background"><img src="./IMG/placeholder.png"/></div>
