--- a/Personal Website/pages/Über mich/index.html
+++ b/Personal Website/pages/Über mich/index.html
@@ -12,7 +12,7 @@
           
           <body>
             <div class=Background><div  class="Name_Background"></div>
-			<span  class="Name">Jonas Gondorf</span>
+			<span  class="Name">Firstname Lastname</span>
 			<div  class="Navbar_Background"></div>
 			<div  class="Impressum_Background"></div><span  class="Impressum">Impressum</span>
 			<span  class="Kontakt">Kontakt</span></div>
