changed links in all index.html files except from Über Mich

--- a/Personal_Website/pages/Lebenslauf/index.html
+++ b/Personal_Website/pages/Lebenslauf/index.html
@@ -17,10 +17,10 @@
 			<div  class="Impressum_Background"></div><span  class="Impressum">Impressum</span>
 			<span  class="Kontakt">Kontakt</span></div>
 			<div class="topnav">
-				<a href="../../index.html">Home</a>
-				<a href="../Über Mich/index.html">Über Mich</a>
+				<a href="Personal_Website/index.html">Home</a>
+				<a href="pages/Über Mich/index.html">Über Mich</a>
 				<a class="active" href="#Lebenslauf">Lebenslauf/Zeugnis</a>
-				<a href="../Kontakt/index.html">Kontakt</a>
+				<a href="pages/Kontakt/index.html">Kontakt</a>
 			</div>
 
 			
