undid previous changes

--- a/Personal_Website/pages/Kontakt/index.html
+++ b/Personal_Website/pages/Kontakt/index.html
@@ -17,9 +17,9 @@
 			<div  class="Impressum_Background"></div><span  class="Impressum">Impressum</span>
 			<span  class="Kontakt">Kontakt</span></div>
 			<div class="topnav">
-				<a href="Personal_Website/index.html">Home</a>
-				<a href="pages/Über Mich/index.html">Über Mich</a>
-				<a href="pages/Lebenslauf/index.html">Lebenslauf/Zeugnis</a>
+				<a href="../../index.html">Home</a>
+				<a href="../Über Mich/index.html">Über Mich</a>
+				<a href="../Lebenslauf/index.html">Lebenslauf/Zeugnis</a>
 				<a class="active" href="#Kontakt">Kontakt</a>
 			</div>
 
