attempt to fix Über Mich link

--- a/Personal_Website/pages/Lebenslauf/index.html
+++ b/Personal_Website/pages/Lebenslauf/index.html
@@ -18,7 +18,7 @@
 			<span  class="Kontakt">Kontakt</span></div>
 			<div class="topnav">
 				<a href="../../index.html">Home</a>
-				<a href="../Über Mich/index.html">Über Mich</a>
+				<a href="../Uber_Mich/index.html">Über Mich</a>
 				<a class="active" href="#Lebenslauf">Lebenslauf/Zeugnis</a>
 				<a href="../Kontakt/index.html">Kontakt</a>
 			</div>
