--- a/Personal_Website/pages/Kontakt/index.html
+++ b/Personal_Website/pages/Kontakt/index.html
@@ -18,7 +18,7 @@
 			<span  class="Kontakt">Kontakt</span></div>
 			<div class="topnav">
 				<a href="../../index.html">Home</a>
-				<a href="../Über Mich/index.html">Über Mich</a>
+				<a href="../Uber_Mich/index.html">Über Mich</a>
 				<a href="../Lebenslauf/index.html">Lebenslauf/Zeugnis</a>
 				<a class="active" href="#Kontakt">Kontakt</a>
 			</div>
