put HTML files in a single folder

--- a/Personal_Website/index.html
+++ b/Personal_Website/index.html
@@ -16,9 +16,9 @@
 			<div  class="Moodboard_Background"><img src="./IMG/placeholder.png"/></div>
 			<div class="topnav">
 				<a class="active" href="index.html">Home</a>
-				<a href="pages/Uber_Mich/index.html">Über Mich</a>
-				<a href="pages/Lebenslauf/index.html">Lebenslauf/Zeugnis</a>
-				<a href="pages/Kontakt/index.html">Kontakt</a>
+				<a href="pages/Uber_Mich.html">Über Mich</a>
+				<a href="pages/Lebenslauf.html">Lebenslauf/Zeugnis</a>
+				<a href="pages/Kontakt.html">Kontakt</a>
 
 			</div>
 		</body>
