--- a/Personal_Website/pages/Kontakt.html
+++ b/Personal_Website/pages/Kontakt.html
@@ -16,9 +16,9 @@
 			<div  class="Impressum_Background"></div><span  class="Impressum">Impressum</span>
 			<span  class="Kontakt">Kontakt</span></div>
 			<div class="topnav">
-				<a href="../../index.html">Home</a>
-				<a href="../Uber_Mich/index.html">Über Mich</a>
-				<a href="../Lebenslauf/index.html">Lebenslauf/Zeugnis</a>
+				<a href="../index.html">Home</a>
+				<a href="Uber_Mich.html">Über Mich</a>
+				<a href="Lebenslauf.html">Lebenslauf/Zeugnis</a>
 				<a class="active" href="#Kontakt">Kontakt</a>
 			</div>
 
