--- a/Personal_Website/pages/Uber_Mich.html
+++ b/Personal_Website/pages/Uber_Mich.html
@@ -10,6 +10,7 @@
           </head>
           
           <body>
+			<div class="Landscape-Content">	
             <div class=Background><div  class="Name_Background"></div>
 			<span  class="Name">Firstname Lastname</span>
 			<div  class="Navbar_Background"></div>
@@ -20,6 +21,12 @@
 				<a class="active" href="#Über Mich">Über Mich</a>
 				<a href="Lebenslauf.html">Lebenslauf/Zeugnis</a>
 				<a href="Kontakt.html">Kontakt</a>
+			</div>
+			</div>
+
+			<div class="Portrait-Content">
+				<h1>Diese Website unsterstützt aktuell keinen Portrait Modus</h1>
+				<p1>Bitte wechsel sie zum Landscape Modus</p1>
 			</div>
 
 			
