portrait mode should be disallowed now

--- a/Personal_Website/pages/Uber_Mich.html
+++ b/Personal_Website/pages/Uber_Mich.html
@@ -28,6 +28,7 @@
 				<h1>Diese Website unsterstützt aktuell keinen Portrait Modus</h1>
 				<p1>Bitte wechsel sie zum Landscape Modus</p1>
 			</div>
+			<script src="JS/orientation.js"></script>
 
 			
           </body>
