fixed typo "wechsel" to "wechseln"

--- a/Personal_Website/index.html
+++ b/Personal_Website/index.html
@@ -26,7 +26,7 @@
 
 		<div class="Portrait-Content">
 			<h1>Diese Website unsterstützt aktuell keinen Portrait Modus</h1>
-			<p1>Bitte wechsel sie zum Landscape Modus</p1>
+			<p1>Bitte wechseln sie zum Landscape Modus</p1>
 		</div>
 		<script src="JS/orientation.js"></script>
 
