restructured html files a bit

--- a/Personal_Website/pages/Kontakt.html
+++ b/Personal_Website/pages/Kontakt.html
@@ -11,17 +11,19 @@
           
         <body>
 			<div class="Landscape-Content">	
-            <div class=Background><div  class="Name_Background"></div>
-			<span  class="Name">Firstname Lastname</span>
-			<div  class="Navbar_Background"></div>
-			<div  class="Impressum_Background"></div><span  class="Impressum">Impressum</span>
-			<span  class="Kontakt">Kontakt</span></div>
-			<div class="topnav">
-				<a href="../index.html">Home</a>
-				<a href="Uber_Mich.html">Über Mich</a>
-				<a href="Lebenslauf.html">Lebenslauf/Zeugnis</a>
-				<a class="active" href="#Kontakt">Kontakt</a>
-			</div>
+				<div class=Background>
+					<div  class="Name_Background"></div>
+					<div  class="Navbar_Background"></div>
+					<span  class="Name">Firstname Lastname</span>
+					<div  class="Impressum_Background"></div><span  class="Impressum">Impressum</span>
+					<span  class="Title">Kontakt</span>
+				</div>
+				<div class="topnav">
+					<a href="../index.html">Home</a>
+					<a href="Uber_Mich.html">Über Mich</a>
+					<a href="Lebenslauf.html">Lebenslauf/Zeugnis</a>
+					<a class="active" href="#Kontakt">Kontakt</a>
+				</div>
 			</div>
 			
 			<div class="Portrait-Content">
