--- a/Personal_Website/pages/Uber_Mich.html
+++ b/Personal_Website/pages/Uber_Mich.html
@@ -9,21 +9,23 @@
             
           </head>
           
-          <body>
+		  <body>
 			<div class="Landscape-Content">	
-            <div class=Background><div  class="Name_Background"></div>
-			<span  class="Name">Firstname Lastname</span>
-			<div  class="Navbar_Background"></div>
-			<div  class="Impressum_Background"></div><span  class="Impressum">Impressum</span>
-			<span  class="Kontakt">Kontakt</span></div>
-			<div class="topnav">
-				<a href="../index.html">Home</a>
-				<a class="active" href="#Über Mich">Über Mich</a>
-				<a href="Lebenslauf.html">Lebenslauf/Zeugnis</a>
-				<a href="Kontakt.html">Kontakt</a>
+				<div class=Background>
+					<div  class="Name_Background"></div>
+					<div  class="Navbar_Background"></div>
+					<span  class="Name">Firstname Lastname</span>
+					<div  class="Impressum_Background"></div><span  class="Impressum">Impressum</span>
+					<span  class="Title">Über Mich</span>
+				</div>
+				<div class="topnav">
+					<a href="../index.html">Home</a>
+					<a class="active" href="#Uber_Mich">Über Mich</a>
+					<a href="Lebenslauf.html">Lebenslauf/Zeugnis</a>
+					<a href="Kontakt.html">Kontakt</a>
+				</div>
 			</div>
-			</div>
-
+			
 			<div class="Portrait-Content">
 				<h1>Diese Website unsterstützt aktuell keinen Portrait Modus</h1>
 				<p1>Bitte wechseln sie zum Landscape Modus</p1>
