--- a/Personal_Website/index.html
+++ b/Personal_Website/index.html
@@ -8,27 +8,27 @@
 		<link rel="stylesheet" href="./CSS/styles.css">
     </head>
           
-    <body>
-		<div class="Landscape-Content">
-            <div class=Background><div  class="Name_Background"></div>
-				<span  class="Name">Firstname Lastname</span>
+	<body>
+		<div class="Landscape-Content">	
+			<div class=Background>
+				<div  class="Name_Background"></div>
 				<div  class="Navbar_Background"></div>
+				<span  class="Name">Firstname Lastname</span>
 				<div  class="Impressum_Background"></div><span  class="Impressum">Impressum</span>
-				<div  class="Moodboard_Background"><img src="./IMG/placeholder.png"/></div>
-				<div class="topnav">
-					<a class="active" href="index.html">Home</a>
-					<a href="pages/Uber_Mich.html">Über Mich</a>
-					<a href="pages/Lebenslauf.html">Lebenslauf/Zeugnis</a>
-					<a href="pages/Kontakt.html">Kontakt</a>
-				</div>
+			</div>
+			<div class="topnav">
+				<a class="active" href="../index.html">Home</a>
+				<a href="Uber_Mich.html">Über Mich</a>
+				<a href="Lebenslauf.html">Lebenslauf/Zeugnis</a>
+				<a href="Kontakt.html">Kontakt</a>
 			</div>
 		</div>
-
+		
 		<div class="Portrait-Content">
 			<h1>Diese Website unsterstützt aktuell keinen Portrait Modus</h1>
 			<p1>Bitte wechseln sie zum Landscape Modus</p1>
 		</div>
-		<script src="JS/orientation.js"></script>
+		<script src="../JS/orientation.js"></script>
 
 	</body>
 </html>
