forgot pages/ in index.html (name may change

--- a/Personal_Website/index.html
+++ b/Personal_Website/index.html
@@ -18,9 +18,9 @@
 			</div>
 			<div class="topnav">
 				<a class="active" href="../index.html">Home</a>
-				<a href="Uber_Mich.html">Über Mich</a>
-				<a href="Lebenslauf.html">Lebenslauf/Zeugnis</a>
-				<a href="Kontakt.html">Kontakt</a>
+				<a href="pages/Uber_Mich.html">Über Mich</a>
+				<a href="pages/Lebenslauf.html">Lebenslauf/Zeugnis</a>
+				<a href="pages/Kontakt.html">Kontakt</a>
 			</div>
 		</div>
 		
