--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">           
         <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="./CSS/styles.css">
+
     </head>
           
 	<body>
@@ -16,8 +17,11 @@
 				<span  class="Name">Firstname Lastname</span>
 				<div  class="Impressum_Background"></div><span  class="Impressum">Impressum</span>
 			</div>
+			<div class="Moodboard_Background">
+				<span> <img src="IMG\placeholder.png"> </span>
+			</div>
 			<div class="topnav">
-				<a class="active" href="../index.html">Home</a>
+				<a class="active" href="index.html">Home</a>
 				<a href="pages/Uber_Mich.html">Über Mich</a>
 				<a href="pages/Lebenslauf.html">Lebenslauf/Zeugnis</a>
 				<a href="pages/Kontakt.html">Kontakt</a>
@@ -28,7 +32,7 @@
 			<h1>Diese Website unsterstützt aktuell keinen Portrait Modus</h1>
 			<p1>Bitte wechseln sie zum Landscape Modus</p1>
 		</div>
-		<script src="/JS/orientation.js"></script>
+		<script src="JS/orientation.js"></script>
 
 	</body>
 </html>
