fixed formatting and resolved some tag issues

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<div  class="Impressum_Background"></div><span  class="Impressum">Impressum</span>
 			</div>
 			<div class="Moodboard_Background">
-				<span> <img src="IMG\placeholder.png"> </span>
+				<span> <img src="IMG/placeholder.png" alt="this is just a placeholder"> </span>
 			</div>
 			<div class="topnav">
 				<a class="active" href="index.html">Home</a>
@@ -30,7 +30,7 @@
 		
 		<div class="Portrait-Content">
 			<h1>Diese Website unsterstützt aktuell keinen Portrait Modus</h1>
-			<p1>Bitte wechseln sie zum Landscape Modus</p1>
+			<p>Bitte wechseln sie zum Landscape Modus</p>
 		</div>
 		<script src="JS/orientation.js"></script>
 
