--- a/pages/Kontakt.html
+++ b/pages/Kontakt.html
@@ -28,7 +28,7 @@
 			
 			<div class="Portrait-Content">
 				<h1>Diese Website unsterstützt aktuell keinen Portrait Modus</h1>
-				<p1>Bitte wechseln sie zum Landscape Modus</p1>
+				<p>Bitte wechseln sie zum Landscape Modus</p>
 			</div>
 			<script src="../JS/orientation.js"></script>
 
