--- a/pages/Uber_Mich.html
+++ b/pages/Uber_Mich.html
@@ -5,7 +5,7 @@
 			<meta name="viewport" content="width=device-width, initial-scale=1.0">
             <title>Personal Wesbite(Alpha)/Über Mich</title>
             <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-            <link rel="stylesheet" href="../CSS/styles.css">
+            <link rel="stylesheet" href="CSS/styles.css">
             
           </head>
           
