--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<div  class="Impressum_Background"></div><span  class="Impressum">Impressum</span>
 			</div>
 			<div class="Moodboard_Background">
-				<span> <img src="IMG/placeholder.png" alt="this is just a placeholder"> </span>
+				<span class="Moodboard"><img src="IMG/placeholder.png" alt="this is just a placeholder"> </span>
 			</div>
 			<div class="topnav">
 				<a class="active" href="index.html">Home</a>
