added formspree to contact me via email

--- a/pages/Kontakt.html
+++ b/pages/Kontakt.html
@@ -17,6 +17,22 @@
 					<span  class="Name">Firstname Lastname</span>
 					<div  class="Impressum_Background"></div><span  class="Impressum">Impressum</span>
 					<span  class="Title">Kontakt</span>
+					<div class="GMail-Contact">
+						<img class="GMail-Logo" src="../IMG/Gmail_Logo.png" alt="Gmail Logo">
+
+						<form class="GMail-Form" action="https://formspree.io/f/myyqbblr" method="POST">
+							<label>
+								Your email:
+								<input type="email" name="email" required>
+							</label>
+							<br>
+							<label>
+								Your message:
+								<textarea name="message" required></textarea>
+							</label>
+							<button type="submit">Send</button>
+						</form>
+					</div>
 				</div>
 				<div class="topnav">
 					<a href="../index.html">Home</a>
@@ -31,6 +47,7 @@
 				<p>Bitte wechseln sie zum Landscape Modus</p>
 			</div>
 			<script src="../JS/orientation.js"></script>
+			<script src="../JS/gmail_form.js"></script>
 
           </body>
           </html>
