further visual improvements to the E-Mail form

--- a/pages/Kontakt.html
+++ b/pages/Kontakt.html
@@ -22,15 +22,15 @@
 
 						<form class="GMail-Form" action="https://formspree.io/f/myyqbblr" method="POST">
 							<label>
-								Your email:
+								E-mail:
 								<input type="email" name="email" required>
 							</label>
 							<br>
 							<label>
-								Your message:
+								Nachricht:
 								<textarea name="message" required></textarea>
 							</label>
-							<button type="submit">Send</button>
+							<button type="submit">Senden</button>
 						</form>
 					</div>
 				</div>
