added link to github profile with some difficulty

--- a/pages/Kontakt.html
+++ b/pages/Kontakt.html
@@ -33,12 +33,16 @@
 							<button type="submit">Senden</button>
 						</form>
 					</div>
+					<div class="Github-Profile">
+						<a class="GitHub-Link" href="https://github.com/jonascool05" target="_blank">
+							<img class="GitHub-Logo" src="../IMG\GitHub_Logo.png" alt="Github Logo">
+					</div>
 				</div>
 				<div class="topnav">
-					<a href="../index.html">Home</a>
-					<a href="Uber_Mich.html">Über Mich</a>
-					<a href="Lebenslauf.html">Lebenslauf/Zeugnis</a>
-					<a class="active" href="#Kontakt">Kontakt</a>
+					<a href="../index.html" class="nav-link">Home</a>
+					<a href="Uber_Mich.html" class="nav-link">Über Mich</a>
+					<a href="Lebenslauf.html" class="nav-link">Lebenslauf/Zeugnis</a>
+					<a class="nav-link active" href="#Kontakt">Kontakt</a>
 				</div>
 			</div>
 			
