--- a/pages/Lebenslauf.html
+++ b/pages/Lebenslauf.html
@@ -19,10 +19,10 @@
 					<span  class="Title">Lebenslauf</span>
 				</div>
 				<div class="topnav">
-					<a href="../index.html">Home</a>
-					<a href="Uber_Mich.html">Über Mich</a>
-					<a class="active" href="#Lebenslauf">Lebenslauf/Zeugnis</a>
-					<a href="Kontakt.html">Kontakt</a>
+					<a href="../index.html" class="nav-link">Home</a>
+					<a href="Uber_Mich.html" class="nav-link">Über Mich</a>
+					<a class="nav-link active" href="#Lebenslauf">Lebenslauf/Zeugnis</a>
+					<a href="Kontakt.html" class="nav-link">Kontakt</a>
 				</div>
 			</div>
 			
