--- a/pages/Uber_Mich.html
+++ b/pages/Uber_Mich.html
@@ -19,10 +19,10 @@
 					<span  class="Title">Über Mich</span>
 				</div>
 				<div class="topnav">
-					<a href="../index.html">Home</a>
-					<a class="active" href="#Uber_Mich">Über Mich</a>
-					<a href="Lebenslauf.html">Lebenslauf/Zeugnis</a>
-					<a href="Kontakt.html">Kontakt</a>
+					<a href="../index.html" class="nav-link">Home</a>
+					<a class="nav-link active" href="#Uber_Mich">Über Mich</a>
+					<a href="Lebenslauf.html" class="nav-link">Lebenslauf/Zeugnis</a>
+					<a href="Kontakt.html" class="nav-link">Kontakt</a>
 				</div>
 			</div>
 			
