--- a/pages/Kontakt.html
+++ b/pages/Kontakt.html
@@ -3,7 +3,7 @@
           <head>
             <meta charset="utf-8">
 			<meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <title>Personal Wesbite(Alpha)/Kontakt</title>
+            <title>Personal Website(Alpha)/Kontakt</title>
             <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
             <link rel="stylesheet" href="CSS/styles.css">
             
