forgot the closing </a> tag

--- a/pages/Kontakt.html
+++ b/pages/Kontakt.html
@@ -35,7 +35,8 @@
 					</div>
 					<div class="Github-Profile">
 						<a class="GitHub-Link" href="https://github.com/jonascool05" target="_blank">
-							<img class="GitHub-Logo" src="../IMG\GitHub_Logo.png" alt="Github Logo">
+							<img class="GitHub-Logo" src="../IMG/GitHub_Logo.png" alt="Github Logo">
+						</a>
 					</div>
 				</div>
 				<div class="topnav">
