script path should be fixed now

--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>404 Not Found</title>
 
-        <script src="/JS/wrong_url.js" defer></script>
+        <script src="/Personal-Website_ALPHA/JS/wrong_url.js" defer></script>
 
     </head>
 
