added anchors to correct URLs in 404.html

--- a/404.html
+++ b/404.html
@@ -11,6 +11,14 @@
 
     <body>
         <h1>404 Not Found</h1>
+        <hr>
         <p id="errorMessage"></p>
+        <p>Probieren sie es mit Diesen</p>
+        
+        <p>Homepage:  <a href="index.html">https://jonascool05.github.io/Personal-Website_ALPHA/index.html</a> </p>
+        <p>Über Mich: <a href="pages/Uber_Mich.html">https://jonascool05.github.io/Personal-Website_ALPHA/pages/Uber_Mich.html</a> </p>
+        <p>Lebenslauf/Zeugnisse: <a href="pages/Lebenslauf.html">https://jonascool05.github.io/Personal-Website_ALPHA/pages/Lebenslauf.html</a> </p>
+        <p>Kontakt: <a href="pages/Kontakt.html">https://jonascool05.github.io/Personal-Website_ALPHA/pages/Kontakt.html</a> </p>
+
 </body>
 </html>
