added a subject line to the GMail-Form

--- a/pages/Kontakt.html
+++ b/pages/Kontakt.html
@@ -27,6 +27,11 @@
 							</label>
 							<br>
 							<label>
+								Betreff:
+								<input name="subject" class="Betreff" >
+							</label>
+							<br>
+							<label>
 								Nachricht:
 								<textarea name="message" required></textarea>
 							</label>
