added an info that "Betreff" is optional

--- a/pages/Kontakt.html
+++ b/pages/Kontakt.html
@@ -27,7 +27,7 @@
 							</label>
 							<br>
 							<label>
-								Betreff:
+								(optional) Betreff:
 								<input name="subject" class="Betreff" >
 							</label>
 							<br>
