--- a/index.html
+++ b/index.html
@@ -21,10 +21,14 @@
 				<span class="Moodboard"><img src="IMG/placeholder.png" alt="this is just a placeholder"> </span>
 			</div>
 			<div class="topnav">
-				<a class="active" href="index.html">Home</a>
-				<a href="pages/Uber_Mich.html">Über Mich</a>
-				<a href="pages/Lebenslauf.html">Lebenslauf/Zeugnis</a>
-				<a href="pages/Kontakt.html">Kontakt</a>
+				<a class="active" href="index.html" data-translate="home">Home</a>
+				<a href="pages/Uber_Mich.html" data-translate="about_me">Über Mich</a>
+				<a href="pages/Lebenslauf.html" data-translate="resume">Lebenslauf/Zeugnis</a>
+				<a href="pages/Kontakt.html" data-translate="contact">Kontakt</a>
+				<div id="language-switcher">
+					<button onclick="changeLanguage('de')" class="button-lang" data-language="de">Deutsch</button>
+					<button onclick="changeLanguage('en')" class="button-lang" data-language="en">English</button>
+				</div>
 			</div>
 		</div>
 		
@@ -33,6 +37,7 @@
 			<p>Bitte wechseln sie zum Landscape Modus</p>
 		</div>
 		<script src="JS/orientation.js"></script>
+		<script src="JS/translate.js"></script>
 
 	</body>
 </html>
