--- a/pages/Kontakt.html
+++ b/pages/Kontakt.html
@@ -45,10 +45,10 @@
 					</div>
 				</div>
 				<div class="topnav">
-					<a href="../index.html" class="nav-link">Home</a>
-					<a href="Uber_Mich.html" class="nav-link">Über Mich</a>
-					<a href="Lebenslauf.html" class="nav-link">Lebenslauf/Zeugnis</a>
-					<a class="nav-link active" href="#Kontakt">Kontakt</a>
+					<a href="../index.html" class="nav-link" data-translate="home">Home</a>
+					<a href="Uber_Mich.html" class="nav-link" data-translate="about_me">Über Mich</a>
+					<a href="Lebenslauf.html" class="nav-link" data-translate="resume">Lebenslauf/Zeugnis</a>
+					<a class="nav-link active" href="#Kontakt" data-language="contact">Kontakt</a>
 					<div id="language-switcher">
 						<button onclick="changeLanguage('de')" class="button-lang" data-language="de">Deutsch</button>
 						<button onclick="changeLanguage('en')" class="button-lang" data-language="en">English</button>
