--- a/pages/Kontakt.html
+++ b/pages/Kontakt.html
@@ -48,7 +48,7 @@
 					<a href="../index.html" class="nav-link" data-translate="home">Home</a>
 					<a href="Uber_Mich.html" class="nav-link" data-translate="about_me">Über Mich</a>
 					<a href="Lebenslauf.html" class="nav-link" data-translate="resume">Lebenslauf/Zeugnis</a>
-					<a class="nav-link active" href="#Kontakt" data-language="contact">Kontakt</a>
+					<a class="nav-link active" href="#Kontakt" data-translate="contact">Kontakt</a>
 					<div id="language-switcher">
 						<button onclick="changeLanguage('de')" class="button-lang" data-language="de">Deutsch</button>
 						<button onclick="changeLanguage('en')" class="button-lang" data-language="en">English</button>
