moved translation keys seperate javascript file

--- a/pages/Lebenslauf.html
+++ b/pages/Lebenslauf.html
@@ -35,6 +35,7 @@
 				<p>Bitte wechseln sie zum Landscape Modus</p>
 			</div>
 			<script src="../JS/orientation.js"></script>
+			<script src="../JS/translations.js"></script>
 			<script src="../JS/translate.js"></script>
 			
           </body>
