--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 			<p>Bitte wechseln sie zum Landscape Modus</p>
 		</div>
 		<script src="JS/orientation.js"></script>
+		<script src="JS/translations.js"></script>
 		<script src="JS/translate.js"></script>
 
 	</body>
