--- a/pages/Kontakt.html
+++ b/pages/Kontakt.html
@@ -61,6 +61,7 @@
 				<p>Bitte wechseln sie zum Landscape Modus</p>
 			</div>
 			<script src="../JS/orientation.js"></script>
+			<script src="../JS/translations.js"></script>
 			<script src="../JS/translate.js"></script>
 			<script src="../JS/gmail_form.js"></script>
 
