--- a/pages/Kontakt.html
+++ b/pages/Kontakt.html
@@ -27,15 +27,15 @@
 							</label>
 							<br>
 							<label>
-								(optional) Betreff:
+								<span data-translate="subject">(optional) Betreff:</span>
 								<input name="subject" class="Betreff" >
 							</label>
 							<br>
 							<label>
-								Nachricht:
+								<span data-translate="message">Nachricht:</span>
 								<textarea name="message" required></textarea>
 							</label>
-							<button type="submit" class="button-submit">Senden</button>
+							<button type="submit" class="button-submit" data-translate="submit">Senden</button>
 						</form>
 					</div>
 					<div class="Github-Profile">
