fixed a typo in unterstützt

--- a/pages/Lebenslauf.html
+++ b/pages/Lebenslauf.html
@@ -31,7 +31,7 @@
 			</div>
 			
 			<div class="Portrait-Content">
-				<h1>Diese Website unsterstützt aktuell keinen Portrait Modus</h1>
+				<h1>Diese Website unterstützt aktuell keinen Portrait Modus</h1>
 				<p>Bitte wechseln sie zum Landscape Modus</p>
 			</div>
 			<script src="../JS/orientation.js"></script>
