added translations to class Title

--- a/pages/Uber_Mich.html
+++ b/pages/Uber_Mich.html
@@ -16,7 +16,7 @@
 					<div  class="Navbar_Background"></div>
 					<span  class="Name">Firstname Lastname</span>
 					<div  class="Impressum_Background"></div><span  class="Impressum">Impressum</span>
-					<span  class="Title">Über Mich</span>
+					<span  class="Title" data-translate="about_me">Über Mich</span>
 				</div>
 				<div class="topnav">
 					<a href="../index.html" class="nav-link" data-translate="home">Home</a>
