--- a/pages/Kontakt.html
+++ b/pages/Kontakt.html
@@ -16,7 +16,7 @@
 					<div  class="Navbar_Background"></div>
 					<span  class="Name">Firstname Lastname</span>
 					<div  class="Impressum_Background"></div><span  class="Impressum">Impressum</span>
-					<span  class="Title">Kontakt</span>
+					<span  class="Title" data-translate="contact">Kontakt</span>
 					<div class="GMail-Contact">
 						<img class="GMail-Logo" src="../IMG/Gmail_Logo.png" alt="Gmail Logo">
 
