--- a/pages/Lebenslauf.html
+++ b/pages/Lebenslauf.html
@@ -16,7 +16,7 @@
 					<div  class="Navbar_Background"></div>
 					<span  class="Name">Firstname Lastname</span>
 					<div  class="Impressum_Background"></div><span  class="Impressum">Impressum</span>
-					<span  class="Title">Lebenslauf</span>
+					<span  class="Title" data-translate="resume">Lebenslauf</span>
 				</div>
 				<div class="topnav">
 					<a href="../index.html" class="nav-link" data-translate="home">Home</a>
