--- a/404.html
+++ b/404.html
@@ -4,21 +4,26 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>404 Not Found</title>
-
-        <script src="/Personal-Website_ALPHA/JS/wrong_url.js" defer></script>
+        <link rel="stylesheet" href="CSS/404.css"> 
 
     </head>
 
     <body>
         <h1>404 Not Found</h1>
         <hr>
-        <p id="errorMessage"></p>
-        <p>Probieren sie es mit Diesen</p>
+        <div id="language-switcher">
+            <button onclick="changeLanguage('de')" class="button-lang" data-language="de">Deutsch</button>
+            <button onclick="changeLanguage('en')" class="button-lang" data-language="en">English</button>
+        </div>
+        <p> <span id="errorMessage"></span><span id="errorMessageURL"></span></p>
+        <p data-translate="try_these">Probieren sie es mit Diesen URLs</p>
         
-        <p>Homepage:  <a href="index.html">https://jonascool05.github.io/Personal-Website_ALPHA/index.html</a> </p>
-        <p>Über Mich: <a href="pages/Uber_Mich.html">https://jonascool05.github.io/Personal-Website_ALPHA/pages/Uber_Mich.html</a> </p>
-        <p>Lebenslauf/Zeugnisse: <a href="pages/Lebenslauf.html">https://jonascool05.github.io/Personal-Website_ALPHA/pages/Lebenslauf.html</a> </p>
-        <p>Kontakt: <a href="pages/Kontakt.html">https://jonascool05.github.io/Personal-Website_ALPHA/pages/Kontakt.html</a> </p>
+        <p><span data-translate="home">Home</span>: <a href="index.html">https://jonascool05.github.io/Personal-Website_ALPHA/index.html</a> </p>
+        <p> <span data-translate="about_me">Über Mich</span>: <a href="pages/Uber_Mich.html">https://jonascool05.github.io/Personal-Website_ALPHA/pages/Uber_Mich.html</a> </p>
+        <p> <span data-translate="resume">Lebenslauf/Zeugnisse</span>: <a href="pages/Lebenslauf.html">https://jonascool05.github.io/Personal-Website_ALPHA/pages/Lebenslauf.html</a> </p>
+        <p> <span data-translate="contact">Kontakt:</span>: <a href="pages/Kontakt.html">https://jonascool05.github.io/Personal-Website_ALPHA/pages/Kontakt.html</a> </p>
 
+        <script src="JS/translations.js"></script>
+        <script src="JS/translate.js"></script>
 </body>
 </html>
