switched to absolute paths for correct URLS

--- a/404.html
+++ b/404.html
@@ -18,10 +18,10 @@
         <p> <span id="errorMessage"></span><span id="errorMessageURL"></span></p>
         <p data-translate="try_these">Probieren sie es mit Diesen URLs</p>
         
-        <p><span data-translate="home">Home</span>: <a href="index.html">https://jonascool05.github.io/Personal-Website_ALPHA/index.html</a> </p>
-        <p> <span data-translate="about_me">Über Mich</span>: <a href="pages/Uber_Mich.html">https://jonascool05.github.io/Personal-Website_ALPHA/pages/Uber_Mich.html</a> </p>
-        <p> <span data-translate="resume">Lebenslauf/Zeugnisse</span>: <a href="pages/Lebenslauf.html">https://jonascool05.github.io/Personal-Website_ALPHA/pages/Lebenslauf.html</a> </p>
-        <p> <span data-translate="contact">Kontakt:</span>: <a href="pages/Kontakt.html">https://jonascool05.github.io/Personal-Website_ALPHA/pages/Kontakt.html</a> </p>
+        <p><span data-translate="home">Home</span>: <a href="/Personal-Website_ALPHA/index.html">https://jonascool05.github.io/Personal-Website_ALPHA/index.html</a> </p>
+        <p> <span data-translate="about_me">Über Mich</span>: <a href="/Personal-Website_ALPHA/pages/Uber_Mich.html">https://jonascool05.github.io/Personal-Website_ALPHA/pages/Uber_Mich.html</a> </p>
+        <p> <span data-translate="resume">Lebenslauf/Zeugnisse</span>: <a href="/Personal-Website_ALPHA/pages/Lebenslauf.html">https://jonascool05.github.io/Personal-Website_ALPHA/pages/Lebenslauf.html</a> </p>
+        <p> <span data-translate="contact">Kontakt:</span>: <a href="/Personal-Website_ALPHA/pages/Kontakt.html">https://jonascool05.github.io/Personal-Website_ALPHA/pages/Kontakt.html</a> </p>
 
         <script src="JS/translations.js"></script>
         <script src="JS/translate.js"></script>
