corrected absolute path for css and added to JS

--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>404 Not Found</title>
-        <link rel="stylesheet" href="/CSS/404.css"> 
+        <link rel="stylesheet" href="/Personal-Website_ALPHA/CSS/404.css"> 
 
     </head>
 
@@ -23,7 +23,7 @@
         <p> <span data-translate="resume">Lebenslauf/Zeugnisse</span>: <a href="/Personal-Website_ALPHA/pages/Lebenslauf.html">https://jonascool05.github.io/Personal-Website_ALPHA/pages/Lebenslauf.html</a> </p>
         <p> <span data-translate="contact">Kontakt:</span>: <a href="/Personal-Website_ALPHA/pages/Kontakt.html">https://jonascool05.github.io/Personal-Website_ALPHA/pages/Kontakt.html</a> </p>
 
-        <script src="JS/translations.js"></script>
-        <script src="JS/translate.js"></script>
+        <script src="/Personal-Website_ALPHA//JS/translations.js"></script>
+        <script src="/Personal-Website_ALPHA//JS/translate.js"></script>
 </body>
 </html>
