added menu to pages

--- a/pages/Kontakt.html
+++ b/pages/Kontakt.html
@@ -45,6 +45,7 @@
 					</div>
 				</div>
 				<div class="topnav">
+					<div class="nav-icon">&#9776;</div>
 					<a href="../index.html" class="nav-link" data-translate="home">Home</a>
 					<a href="Uber_Mich.html" class="nav-link" data-translate="about_me">Über Mich</a>
 					<a href="Lebenslauf.html" class="nav-link" data-translate="resume">Lebenslauf/Zeugnis</a>
@@ -61,6 +62,7 @@
 				<p>Bitte wechseln sie zum Landscape Modus</p>
 			</div>
 			<script src="../JS/orientation.js"></script>
+			<script src="../JS/menu.js"></script>
 			<script src="../JS/translations.js"></script>
 			<script src="../JS/translate.js"></script>
 			<script src="../JS/gmail_form.js"></script>
