--- a/pages/Lebenslauf.html
+++ b/pages/Lebenslauf.html
@@ -19,6 +19,7 @@
 					<span  class="Title" data-translate="resume">Lebenslauf</span>
 				</div>
 				<div class="topnav">
+					<div class="nav-icon">&#9776;</div>
 					<a href="../index.html" class="nav-link" data-translate="home">Home</a>
 					<a href="Uber_Mich.html" class="nav-link" data-translate="about_me">Über Mich</a>
 					<a class="nav-link active" href="#Lebenslauf" data-translate="resume">Lebenslauf/Zeugnis</a>
@@ -35,6 +36,7 @@
 				<p>Bitte wechseln sie zum Landscape Modus</p>
 			</div>
 			<script src="../JS/orientation.js"></script>
+			<script src="../JS/menu.js"></script>
 			<script src="../JS/translations.js"></script>
 			<script src="../JS/translate.js"></script>
 			
