--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Personal Website (Alpha)</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">           
         <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-		<link rel="stylesheet" href="./CSS/styles.css">
+		<link rel="stylesheet" href="CSS/styles.css">
 
     </head>
           
@@ -21,10 +21,11 @@
 				<span class="Moodboard"><img src="IMG/placeholder.png" alt="this is just a placeholder"> </span>
 			</div>
 			<div class="topnav">
-				<a class="active" href="index.html" data-translate="home">Home</a>
-				<a href="pages/Uber_Mich.html" data-translate="about_me">Über Mich</a>
-				<a href="pages/Lebenslauf.html" data-translate="resume">Lebenslauf/Zeugnis</a>
-				<a href="pages/Kontakt.html" data-translate="contact">Kontakt</a>
+				<div class="nav-icon">&#9776;</div>
+				<a class="nav-link active" href="index.html" data-translate="home">Home</a>
+				<a href="pages/Uber_Mich.html" class="nav-link" data-translate="about_me">Über Mich</a>
+				<a href="pages/Lebenslauf.html" class="nav-link" data-translate="resume">Lebenslauf/Zeugnis</a>
+				<a href="pages/Kontakt.html" class="nav-link" data-translate="contact">Kontakt</a>
 				<div id="language-switcher">
 					<button onclick="changeLanguage('de')" class="button-lang" data-language="de">Deutsch</button>
 					<button onclick="changeLanguage('en')" class="button-lang" data-language="en">English</button>
@@ -37,6 +38,7 @@
 			<p>Bitte wechseln sie zum Landscape Modus</p>
 		</div>
 		<script src="JS/orientation.js"></script>
+		<script src="JS/menu.js"></script>
 		<script src="JS/translations.js"></script>
 		<script src="JS/translate.js"></script>
 
