--- a/pages/Lebenslauf.html
+++ b/pages/Lebenslauf.html
@@ -10,8 +10,8 @@
           </head>
           
 		<body>
-			<div class="Landscape-Content">	
-				<div class=Background>
+			<div class="Content">	
+				<div class="Background">
 					<div  class="Name_Background"></div>
 					<div  class="Navbar_Background"></div>
 					<span  class="Name">Firstname Lastname</span>
@@ -30,11 +30,7 @@
 					</div>
 				</div>
 			</div>
-			
-			<div class="Portrait-Content">
-				<h1>Diese Website unterstützt aktuell keinen Portrait Modus</h1>
-				<p>Bitte wechseln sie zum Landscape Modus</p>
-			</div>
+
 			<script src="../JS/orientation.js"></script>
 			<script src="../JS/menu.js"></script>
 			<script src="../JS/translations.js"></script>
