added a clear button to gmail-form (wip)

--- a/pages/Kontakt.html
+++ b/pages/Kontakt.html
@@ -36,6 +36,7 @@
 								<textarea name="message" required></textarea>
 							</label>
 							<button type="submit" class="button-submit" data-translate="submit">Senden</button>
+							<button type="button" class="button-clear" data-translate="clear">Löschen</button>
 							<button type="button" class="button-cancel" data-translate="cancel">Abbrechen</button>
 						</form>
 					</div>
