--- a/pages/Kontakt.html
+++ b/pages/Kontakt.html
@@ -10,6 +10,10 @@
           </head>
           
         <body>
+			<div class="loading" id="loadingOverlay">
+				<div class="loading-icon" id="loadingIcon"></div>
+			</div>
+
 			<div class="Content">	
 				<div class="Background">
 					<div  class="Name_Background"></div>
@@ -59,6 +63,7 @@
 				</div>
 			</div>
 			
+			<script src="../JS/loading.js"></script>
 			<script src="../JS/orientation.js"></script>
 			<script src="../JS/menu.js"></script>
 			<script src="../JS/translations.js"></script>
