--- a/pages/Uber_Mich.html
+++ b/pages/Uber_Mich.html
@@ -10,6 +10,10 @@
           </head>
           
 		  <body>
+			<div class="loading" id="loadingOverlay">
+				<div class="loading-icon" id="loadingIcon"></div>
+			</div>
+
 			<div class="Content">	
 				<div class="Background">
 					<div  class="Name_Background"></div>
@@ -30,7 +34,8 @@
 					</div>
 				</div>
 			</div>
-			
+
+			<script src="../JS/loading.js"></script>
 			<script src="../JS/orientation.js"></script>
 			<script src="../JS/menu.js"></script>
 			<script src="../JS/translations.js"></script>
