added a "legal" page

--- a/pages/Lebenslauf.html
+++ b/pages/Lebenslauf.html
@@ -19,7 +19,9 @@
 					<div  class="Name_Background"></div>
 					<div  class="Navbar_Background"></div>
 					<span  class="Name">Firstname Lastname</span>
-					<div  class="Impressum_Background"></div><span  class="Impressum">Impressum</span>
+					<div  class="Rechtliches_Background">
+						<a href="Rechtliches.html" class="Rechtliches" data-translate="legal">Rechtliches</a>
+					</div>
 					<span  class="Title" data-translate="resume">Lebenslauf</span>
 				</div>
 				<div class="topnav">
