--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 				<div  class="Name_Background"></div>
 				<div  class="Navbar_Background"></div>
 				<span  class="Name">Firstname Lastname</span>
-				<div  class="Impressum_Background"></div><span  class="Impressum">Impressum</span>
+				<div  class="Rechtliches_Background">
+					<a href="pages/Rechtliches.html" class="Rechtliches" data-translate="legal">Rechtliches</a>
+				</div>
 			</div>
 			<div class="Moodboard_Background">
 				<span class="Moodboard"><img src="IMG/placeholder.png" alt="this is just a placeholder"> </span>
