--- a/pages/Rechtliches.html
+++ b/pages/Rechtliches.html
@@ -3,7 +3,7 @@
           <head>
             <meta charset="utf-8">
 			<meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <title>Personal Website(Alpha)/Über Mich</title>
+            <title data-translate="legal">Rechtliches</title>
             <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
             <link rel="stylesheet" href="CSS/styles.css">
             
@@ -22,12 +22,12 @@
 					<div  class="Rechtliches_Background">
 						<a href="Rechtliches.html" class="Rechtliches" data-translate="legal">Rechtliches</a>
 					</div>
-					<span  class="Title" data-translate="about_me">Über Mich</span>
+					<span  class="Title" data-translate="legal">Rechtliches</span>
 				</div>
 				<div class="topnav">
 					<div class="nav-icon">&#9776;</div>
 					<a href="../index.html" class="nav-link" data-translate="home">Home</a>
-					<a class="nav-link active" href="#Uber_Mich" data-translate="about_me">Über Mich</a>
+					<a href="Uber_Mich.html" class="nav-link" data-translate="about_me">Über Mich</a>
 					<a href="Lebenslauf.html" class="nav-link" data-translate="resume">Lebenslauf/Zeugnis</a>
 					<a href="Kontakt.html" class="nav-link" data-translate="contact">Kontakt</a>
 					<div id="language-switcher">
