added translations to <title>

--- a/pages/Lebenslauf.html
+++ b/pages/Lebenslauf.html
@@ -3,7 +3,7 @@
           <head>
             <meta charset="utf-8">
 			<meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <title>Personal Website(Alpha)/Lebenslauf/Zeugnis</title>
+            <title data-translate="resume">Lebenslauf/Zeugnis</title>
             <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
             <link rel="stylesheet" href="CSS/styles.css">  
         
