--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="de">
     <head>
 		<meta charset="utf-8">  
-        <title>Personal Website (Alpha)</title>
+        <title data-translate="home">Home</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">           
         <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="CSS/styles.css">
