--- a/pages/Kontakt.html
+++ b/pages/Kontakt.html
@@ -16,11 +16,21 @@
 
 			<div class="Content">	
 				<div class="Background">
-					<div  class="Navbar_Background"></div>
-					<span  class="Name">Firstname Lastname</span>
-					<div  class="Rechtliches_Background">
-						<a href="Rechtliches.html" class="Rechtliches" data-translate="legal">Rechtliches</a>
+					<div  class="Navbar_Background">
+						<div class="topnav">
+							<div class="nav-icon">&#9776;</div>
+							<a href="../index.html" class="nav-link" data-translate="home">Home</a>
+							<a href="Uber_Mich.html" class="nav-link" data-translate="about_me">Über Mich</a>
+							<a href="Lebenslauf.html" class="nav-link" data-translate="resume">Lebenslauf/Zeugnis</a>
+							<a class="nav-link active" href="#Kontakt" data-translate="contact">Kontakt</a>
+							<div id="language-switcher">
+								<button onclick="changeLanguage('de')" class="button-lang" data-language="de">Deutsch</button>
+								<button onclick="changeLanguage('en')" class="button-lang" data-language="en">English</button>
+							</div>
+						</div>
+						<span  class="Name">Firstname Lastname</span>
 					</div>
+					
 					<span  class="Title" data-translate="contact">Kontakt</span>
 					<div class="GMail-Contact">
 						<img class="GMail-Logo" src="../IMG/Gmail_Logo.png" alt="Gmail Logo">
@@ -50,16 +60,8 @@
 							<img class="GitHub-Logo" src="../IMG/GitHub_Logo.png" alt="Github Logo">
 						</a>
 					</div>
-				</div>
-				<div class="topnav">
-					<div class="nav-icon">&#9776;</div>
-					<a href="../index.html" class="nav-link" data-translate="home">Home</a>
-					<a href="Uber_Mich.html" class="nav-link" data-translate="about_me">Über Mich</a>
-					<a href="Lebenslauf.html" class="nav-link" data-translate="resume">Lebenslauf/Zeugnis</a>
-					<a class="nav-link active" href="#Kontakt" data-translate="contact">Kontakt</a>
-					<div id="language-switcher">
-						<button onclick="changeLanguage('de')" class="button-lang" data-language="de">Deutsch</button>
-						<button onclick="changeLanguage('en')" class="button-lang" data-language="en">English</button>
+					<div  class="Rechtliches_Background">
+						<a href="Rechtliches.html" class="Rechtliches" data-translate="legal">Rechtliches</a>
 					</div>
 				</div>
 			</div>
