--- a/pages/Lebenslauf.html
+++ b/pages/Lebenslauf.html
@@ -16,22 +16,23 @@
 
 			<div class="Content">	
 				<div class="Background">
-					<div  class="Navbar_Background"></div>
-					<span  class="Name">Firstname Lastname</span>
-					<div  class="Rechtliches_Background">
-						<a href="Rechtliches.html" class="Rechtliches" data-translate="legal">Rechtliches</a>
+					<div  class="Navbar_Background">
+						<div class="topnav">
+							<div class="nav-icon">&#9776;</div>
+							<a href="../index.html" class="nav-link" data-translate="home">Home</a>
+							<a href="Uber_Mich.html" class="nav-link" data-translate="about_me">Über Mich</a>
+							<a class="nav-link active" href="#Lebenslauf" data-translate="resume">Lebenslauf/Zeugnis</a>
+							<a href="Kontakt.html" class="nav-link" data-translate="contact">Kontakt</a>
+							<div id="language-switcher">
+								<button onclick="changeLanguage('de')" class="button-lang" data-language="de">Deutsch</button>
+								<button onclick="changeLanguage('en')" class="button-lang" data-language="en">English</button>
+							</div>
+						</div>
+						<span  class="Name">Firstname Lastname</span>
 					</div>
 					<span  class="Title" data-translate="resume">Lebenslauf</span>
-				</div>
-				<div class="topnav">
-					<div class="nav-icon">&#9776;</div>
-					<a href="../index.html" class="nav-link" data-translate="home">Home</a>
-					<a href="Uber_Mich.html" class="nav-link" data-translate="about_me">Über Mich</a>
-					<a class="nav-link active" href="#Lebenslauf" data-translate="resume">Lebenslauf/Zeugnis</a>
-					<a href="Kontakt.html" class="nav-link" data-translate="contact">Kontakt</a>
-					<div id="language-switcher">
-						<button onclick="changeLanguage('de')" class="button-lang" data-language="de">Deutsch</button>
-						<button onclick="changeLanguage('en')" class="button-lang" data-language="en">English</button>
+					<div  class="Rechtliches_Background">
+						<a href="Rechtliches.html" class="Rechtliches" data-translate="legal">Rechtliches</a>
 					</div>
 				</div>
 			</div>
