--- a/pages/Rechtliches.html
+++ b/pages/Rechtliches.html
@@ -37,11 +37,11 @@
 				</div>
 			</div>
 
-			<script src="../JS/loading.js"></script>
-			<script src="../JS/orientation.js"></script>
-			<script src="../JS/menu.js"></script>
-			<script src="../JS/translations.js"></script>
-			<script src="../JS/translate.js"></script>
+			<script src="https://jonascool05.github.io/Personal-Website_ALPHA/JS/loading.js"></script>
+			<script src="https://jonascool05.github.io/Personal-Website_ALPHA/JS/orientation.js"></script>
+			<script src="https://jonascool05.github.io/Personal-Website_ALPHA/JS/menu.js"></script>
+			<script src="https://jonascool05.github.io/Personal-Website_ALPHA/JS/translations.js"></script>
+			<script src="https://jonascool05.github.io/Personal-Website_ALPHA/JS/translate.js"></script>			
 			
           </body>
           </html>
