Add Semantic HTML Structure

--- a/pages/Kontakt.html
+++ b/pages/Kontakt.html
@@ -16,6 +16,8 @@
 
 			<div class="Content">	
 				<div class="Background">
+
+					<header>
 					<div  class="Navbar_Background">
 						<div class="topnav">
 							<div class="nav-icon">&#9776;</div>
@@ -30,7 +32,9 @@
 						</div>
 						<span  class="Name">Firstname Lastname</span>
 					</div>
+					</header>
 					
+					<main>
 					<span  class="Title" data-translate="contact">Kontakt</span>
 					<div class="GMail-Contact">
 						<img class="GMail-Logo" src="../IMG/Gmail_Logo.png" alt="Gmail Logo">
@@ -60,9 +64,13 @@
 							<img class="GitHub-Logo" src="../IMG/GitHub_Logo.png" alt="Github Logo">
 						</a>
 					</div>
+					</main>
+
+					<footer>
 					<div  class="Rechtliches_Background">
 						<a href="Rechtliches.html" class="Rechtliches" data-translate="legal">Rechtliches</a>
 					</div>
+					</footer>
 				</div>
 			</div>
 			
