--- a/pages/Rechtliches.html
+++ b/pages/Rechtliches.html
@@ -16,6 +16,8 @@
 
 			<div class="Content">	
 				<div class="Background">
+
+					<header>
 					<div  class="Navbar_Background">
 						<div class="topnav">
 							<div class="nav-icon">&#9776;</div>
@@ -30,10 +32,18 @@
 						</div>
 						<span  class="Name">Firstname Lastname</span>
 					</div>
+					</header>
+
+					<main>
 					<span  class="Title" data-translate="legal">Rechtliches</span>
+					</main>
+
+					<footer>
 					<div  class="Rechtliches_Background">
 						<a href="Rechtliches.html" class="Rechtliches" data-translate="legal">Rechtliches</a>
 					</div>
+					</footer>
+
 				</div>
 			</div>
 
