--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 
 		<div class="Content">	
 			<div class="Background">
+
+				<header>
 				<div  class="Navbar_Background">
 					<div class="topnav">
 						<div class="nav-icon">&#9776;</div>
@@ -30,12 +32,20 @@
 					</div>
 					<span  class="Name">Firstname Lastname</span>
 				</div>
+				</header>
+				
+				<main>
 				<div class="Moodboard_Background">
 					<span class="Moodboard"><img src="IMG/placeholder.png" alt="this is just a placeholder"> </span>
 				</div>
+				</main>
+
+				<footer>
 				<div  class="Rechtliches_Background">
 					<a href="pages/Rechtliches.html" class="Rechtliches" data-translate="legal">Rechtliches</a>
 				</div>
+				</footer>
+				
 			</div>
 			
 			
