create assets folder, move images and sounds there

--- a/pages/Kontakt.html
+++ b/pages/Kontakt.html
@@ -37,7 +37,7 @@
 					<main>
 					<span  class="Title" data-translate="contact">Kontakt</span>
 					<div class="GMail-Contact">
-						<img class="GMail-Logo" src="../IMG/Gmail_Logo.png" alt="Gmail Logo">
+						<img class="GMail-Logo" src="../assets/images/Gmail_Logo.png" alt="Gmail Logo">
 
 						<form class="GMail-Form" action="https://formspree.io/f/myyqbblr" method="POST">
 							<label>
@@ -61,7 +61,7 @@
 					</div>
 					<div class="Github-Profile">
 						<a class="GitHub-Link" href="https://github.com/jonascool05" target="_blank">
-							<img class="GitHub-Logo" src="../IMG/GitHub_Logo.png" alt="Github Logo">
+							<img class="GitHub-Logo" src="../assets/images/GitHub_Logo.png" alt="Github Logo">
 						</a>
 					</div>
 					</main>
