--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 				
 				<main>
 				<div class="Moodboard_Background">
-					<span class="Moodboard"><img src="IMG/placeholder.png" alt="this is just a placeholder"> </span>
+					<span class="Moodboard"><img src="assets/images/placeholder.png" alt="this is just a placeholder"> </span>
 				</div>
 				</main>
 
