added Design.html and adjusted navbar accordingly

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 						<a class="nav-link active" href="index.html" data-translate="home">Home</a>
 						<a href="pages/Uber_Mich.html" class="nav-link" data-translate="about_me">Über Mich</a>
 						<a href="pages/Lebenslauf.html" class="nav-link" data-translate="resume">Lebenslauf/Zeugnis</a>
+						<a href="pages/Design.html" class="nav-link">Design</a>
 						<a href="pages/Kontakt.html" class="nav-link" data-translate="contact">Kontakt</a>
 						<div id="language-switcher">
 							<button onclick="changeLanguage('de')" class="button-lang" data-language="de">Deutsch</button>
