--- a/pages/Uber_Mich.html
+++ b/pages/Uber_Mich.html
@@ -24,6 +24,7 @@
 							<a href="../index.html" class="nav-link" data-translate="home">Home</a>
 							<a class="nav-link active" href="#Uber_Mich" data-translate="about_me">Über Mich</a>
 							<a href="Lebenslauf.html" class="nav-link" data-translate="resume">Lebenslauf/Zeugnis</a>
+							<a href="Design.html" class="nav-link">Design</a>
 							<a href="Kontakt.html" class="nav-link" data-translate="contact">Kontakt</a>
 							<div id="language-switcher">
 								<button onclick="changeLanguage('de')" class="button-lang" data-language="de">Deutsch</button>
