--- a/404.html
+++ b/404.html
@@ -21,6 +21,7 @@
         <p><span data-translate="home">Home</span>: <a href="/Personal-Website_ALPHA/index.html">https://jonascool05.github.io/Personal-Website_ALPHA/index.html</a> </p>
         <p> <span data-translate="about_me">Über Mich</span>: <a href="/Personal-Website_ALPHA/pages/Uber_Mich.html">https://jonascool05.github.io/Personal-Website_ALPHA/pages/Uber_Mich.html</a> </p>
         <p> <span data-translate="resume">Lebenslauf/Zeugnisse</span>: <a href="/Personal-Website_ALPHA/pages/Lebenslauf.html">https://jonascool05.github.io/Personal-Website_ALPHA/pages/Lebenslauf.html</a> </p>
+        <p> <span>Design</span>: <a href="/Personal-Website_ALPHA/pages/Design.html">https://jonascool05.github.io/Personal-Website_ALPHA/pages/Design.html</a> </p>
         <p> <span data-translate="contact">Kontakt:</span>: <a href="/Personal-Website_ALPHA/pages/Kontakt.html">https://jonascool05.github.io/Personal-Website_ALPHA/pages/Kontakt.html</a> </p>
 
         <script src="/Personal-Website_ALPHA/JS/translations.js"></script>
