--- a/pages/Design.html
+++ b/pages/Design.html
@@ -3,7 +3,7 @@
           <head>
             <meta charset="utf-8">
 			<meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <title data-translate="resume">Lebenslauf/Zeugnis</title>
+            <title>Design</title>
             <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
             <link rel="stylesheet" href="CSS/styles.css">  
         
@@ -23,8 +23,8 @@
 							<div class="nav-icon">&#9776;</div>
 							<a href="../index.html" class="nav-link" data-translate="home">Home</a>
 							<a href="Uber_Mich.html" class="nav-link" data-translate="about_me">Über Mich</a>
-							<a class="nav-link active" href="#Lebenslauf" data-translate="resume">Lebenslauf/Zeugnis</a>
-							<a href="Design.html" class="nav-link">Design</a>
+							<a href="#Lebenslauf" class="nav-link" data-translate="resume">Lebenslauf/Zeugnis</a>
+                            <a class="nav-link active" href="#Design">Design</a>
 							<a href="Kontakt.html" class="nav-link" data-translate="contact">Kontakt</a>
 							<div id="language-switcher">
 								<button onclick="changeLanguage('de')" class="button-lang" data-language="de">Deutsch</button>
@@ -36,7 +36,7 @@
 					</header>
 
 					<main>
-					<span  class="Title" data-translate="resume">Lebenslauf</span>
+					<span  class="Title">Design</span>
 					</main>
 
 					<footer>
