--- a/pages/Kontakt.html
+++ b/pages/Kontakt.html
@@ -24,13 +24,14 @@
 							<a href="../index.html" class="nav-link" data-translate="home">Home</a>
 							<a href="Uber_Mich.html" class="nav-link" data-translate="about_me">Über Mich</a>
 							<a href="Lebenslauf.html" class="nav-link" data-translate="resume">Lebenslauf/Zeugnis</a>
+							<a href="Design.html" class="nav-link">Design</a>
 							<a class="nav-link active" href="#Kontakt" data-translate="contact">Kontakt</a>
 							<div id="language-switcher">
 								<button onclick="changeLanguage('de')" class="button-lang" data-language="de">Deutsch</button>
 								<button onclick="changeLanguage('en')" class="button-lang" data-language="en">English</button>
 							</div>
 						</div>
-						<span  class="Name">Firstname Lastname</span>
+						<span  class="Name">Jonas Gondorf</span>
 					</div>
 					</header>
 					
