testing page specific translation

--- a/pages/Uber_Mich.html
+++ b/pages/Uber_Mich.html
@@ -37,6 +37,7 @@
 
 					<main>
 					<span  class="Title" data-translate="about_me">Über Mich</span>
+					<span data-translate="test">test</span>
 					</main>
 
 					<footer>
@@ -52,7 +53,8 @@
 			<script src="../JS/orientation.js"></script>
 			<script src="../JS/menu.js"></script>
 			<script src="../JS/translations.js"></script>
-			<script src="../JS/translate.js"></script>
+			<script src="../JS/translation_About-Me.js"></script>
+			<script type="module" src="../JS/translate.mjs"></script>
 			<script src="../JS/gmail_form.js"></script>
 			
 			
